2016-03-07  Peter Stephenson  <p.stephenson@samsung.com>

	* users/21352: Src/subst.c, Test/A03quoting.ztst: use nulstring
	to ensure $'' isn't elided.

	* 38094: Src/signals.c, Test/C03traps.ztst: POSIX exit traps
	aren't local so local level should be 0 so they don't
	get trashed if defined in a function.

2016-03-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 38106: Src/parse.c: if...then if...else should be a parse error.

	* Greg Klanderman: 38086: Doc/Zsh/params.yo, Src/init.c,
	Src/params.c: shuffle init code to localize a global, add
	$ZSH_ARGZERO, refine $ZSH_SCRIPT

2016-03-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 38084: Baruch Siach: configure.ac: use the pcre-config we
	found earlier for determining libs.

2016-03-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 38048: Src/zle_refresh.c: fix "zle redisplay" when called while
	a listing is below the prompt (e.g., from interrupt handler)

	* 38039: Src/options.c: POSIXy behavior for "set +o"

2016-02-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stephane: 38020: fix problems with fractions of a second in
	$SECONDS.

2016-02-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 38024: Src/signals.c, Test/C03traps.ztst: improve 37999 to
	allow nested zsh-mode EXIT traps not to remove a POSIX EXIT
	trap.

2016-02-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/completion-style-guide: Clarify the term "variant".

2016-02-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 37999: README, Src/signals.c, Test/C03traps.ztst: Make
	POSIX-style EXIT traps behave according to POSIX_TRAPS at
	the point where the trap is set.

2016-02-16  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/21256 + workers/37965: Doc/Zsh/contrib.yo,
	Doc/Zsh/mod_mathfunc.yo, Src/zsh.mdd: New math functions
	min(), max(), sum(), provided by a new autoloadable function
	'zmathfunc'.

2016-02-16  Barton E. Schaefer  <schaefer@zsh.org>

	* 38001: Src/Zle/zle_refresh.c: clear-screen re-expands prompts
